	  alpha these types differ in size (size_t is 64bit, 
	  socklen_t is 32bit). Therefore, used a wrapper variable
	  to pass to recvfrom.
	- changed long int to time_t in nsd-patch.c to please compiler
	  on dec alpha.
	- dec alpha complains if statements are in front of variable
	  definitions. Fixed code for some mixups on this.
	- Fixup cutest for dec alpha. Code, lowercase filename, %lf->%f.

19 June 2006: Wouter
	- updated the tpkg/manual tests for NSD 3 config files.
	  Some need root privileges to run (using hping), they all pass.
	- also the tpkg/long test bug_sighup.
	- nsec3 code will warn at prehash time for missing exact nsec3
	  records. So faulty signed zones are more easily spotted.
	- fixed NSEC3 and CNAME/DNAME chains, it will disprove the new qname.
	- removed for() look in CNAME processing, only first CNAME is
	  processed now.
	- zonec will error on a zone with multiple CNAMEs for one name.

16 June 2006: Wouter
	- Swapped read and write ops in xfrd_handle_ipc, so that a read
	  of a signal from main can stop further writes.
	- xfrd will complete its last message before shutting down
	  the ipc writes and then acknowledge the reload-sync.
	  This resolves the race where half of ipc messages caused bad
	  modes from the main.

15 June 2006: Wouter
	- In preparation of notify send overhaul, moved the notify
	  send code to xfrd-notify.c and h files.
	- created cleaner split of notify send and xfr code.
	  Still in the xfr process, because it is a convenient location.
	- fixed bug where notify sending would read from wrong fd.
	- send master zone notifies.
	  Does not skips master zone SOA INFO updates.
	- fixed bug where port number acls did not match.
	- fixed bug where tsig keys are checked for twice, but not error_code.
	- fixed notify send retry counting.
	- added test tpkg for notifies from nsd master to nsd slave.
	- nsd-checkconf flags if you set allow-notify without request-xfr.

14 June 2006: Wouter