@@ -130,10 +130,10 @@ static void tree_print_safe_sub(struct testnode* node)
 	if((rbnode_t*)node == RBTREE_NULL) {
 		return;
 	}
-	printf("Tree node (%Lx): ", (long long)node);
-	printf("parent=%Lx. left=%Lx. right=%Lx. key=%Lx(%d). Color=%x. x=%d\n",
-		(long long)node->node.parent, (long long)node->node.left, (long long)node->node.right, 
-		(long long)node->node.key, node->node.key?*(int*)node->node.key:-1,
+	printf("Tree node (%zx): ", (size_t)node);
+	printf("parent=%zx. left=%zx. right=%zx. key=%zx(%d). Color=%x. x=%d\n",
+		(size_t)node->node.parent, (size_t)node->node.left, (size_t)node->node.right, 
+		(size_t)node->node.key, node->node.key?*(int*)node->node.key:-1,
 		node->node.color, node->x);
 	tree_print_safe_sub((struct testnode*)node->node.left);
 	tree_print_safe_sub((struct testnode*)node->node.right);
@@ -273,10 +273,10 @@ static void test_tree_integrity(CuTest *tc, rbtree_t* tree)
 /* very very safe version of tree print */
 void tree_print_safe(rbtree_t* tree)
 {
-	printf("Rbtree (at %Lx)", (long long) tree);
-	printf(" region=%Lx root=%Lx count=%Ld current=%Lx cmp=%Lx\n",
-		(long long)tree->region, (long long)tree->root, (long long)tree->count,
-		(long long)tree->_node, (long long)tree->cmp);
+	printf("Rbtree (at %zx)", (size_t) tree);
+	printf(" region=%zx root=%zx count=%zd current=%zx cmp=%zx\n",
+		(size_t)tree->region, (size_t)tree->root, (size_t)tree->count,
+		(size_t)tree->_node, (size_t)tree->cmp);
 	if(tree->root) 
 		tree_print_safe_sub((struct testnode*)tree->root);
 }
